# health-monitor

./: .gitignore  GarminDB-README.md  README.md  pyproject.toml
health_monitor/: cli.py  db.py  voice.py
notebooks/: analysis.ipynb
scripts/: garmin_sync.py
